# Interceptor

./: .gitignore  CMakeLists.txt  DXHooker.sln  README.md
Assets/: CMakeLists.txt
DX12Renderer/: DX12Renderer.vcxproj  DX12Renderer.vcxproj.filters
DX12Renderer/include/: DXHelper.h  DXWindow.h  Win32Application.h  Win32Window.h  d3dx12.h  stdafx.h
DX12Renderer/shaders/: shaders.hlsl
DX12Renderer/src/: DXWindow.cpp  Win32Application.cpp  Win32Window.cpp  main.cpp  stdafx.cpp
DXIntercept/: CMakeLists.txt
DXIntercept/Core/: dllmain.cpp
DXViewer/: CMakeLists.txt  pch.h
DXViewer/Core/: main.cpp
DirectDrawHooker/: DirectDrawHooker.vcxproj  DirectDrawHooker.vcxproj.filters
DirectDrawHooker/include/: CpuSampler.h
DirectDrawHooker/src/: CpuSampler.cpp  DirectDrawHook.cpp
Shared/: CMakeLists.txt
Shared/General/: StandardTypes.h
Shared/Windows/: ProcessInfo.cpp  ProcessInfo.h
Shared/Windows/Console/: Config.cpp  Config.h  Print.cpp  Print.h
Shared/Windows/Thread/: CpuSampler.cpp  CpuSampler.h
